deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/saml/authproc_pairwiseid.html
+++ b/devel/saml/authproc_pairwiseid.html
@@ -87,9 +87,9 @@
  </nav>
  <div id="content">
  </div>
-</header><main><h1 id="subjectidattrspairwiseid">
+</header><main><h1 id="samlpairwiseid">
  <code>
-  subjectidattrs:PairwiseID
+  saml:PairwiseID
  </code>
 </h1>
 <p>
@@ -123,7 +123,7 @@ value of
 <div class="codehilite">
  <pre><span></span><code><span class="x">    'authproc' =&gt; [</span>
 <span class="x">        50 =&gt; [</span>
-<span class="x">            'class' =&gt; 'subjectidattrs:PairwiseID',</span>
+<span class="x">            'class' =&gt; 'saml:PairwiseID',</span>
 <span class="x">            'identifyingAttribute' =&gt; 'uid',</span>
 <span class="x">            'scopeAttribute' =&gt; 'scope',</span>
 <span class="x">        ],</span>
