--- a/devel/saml/authproc_subjectid.html
+++ b/devel/saml/authproc_subjectid.html
@@ -87,9 +87,9 @@
  </nav>
  <div id="content">
  </div>
-</header><main><h1 id="subjectidattrssubjectid">
+</header><main><h1 id="samlsubjectid">
  <code>
-  subjectidattrs:SubjectID
+  saml:SubjectID
  </code>
 </h1>
 <p>
@@ -131,7 +131,7 @@ value of
 <div class="codehilite">
  <pre><span></span><code><span class="x">    'authproc' =&gt; [</span>
 <span class="x">        50 =&gt; [</span>
-<span class="x">            'class' =&gt; 'subjectidattrs:SubjectID',</span>
+<span class="x">            'class' =&gt; 'saml:SubjectID',</span>
 <span class="x">            'identifyingAttribute' =&gt; 'uid',</span>
 <span class="x">            'scopeAttribute' =&gt; 'scope',</span>
 <span class="x">        ],</span>
