Add links to subjectid & pairwiseid

--- a/devel/simplesamlphp-authproc.html
+++ b/devel/simplesamlphp-authproc.html
@@ -637,6 +637,22 @@ we may add it on the Modules overview.
   </a>
   : Generate transient NameID.
  </li>
+ <li>
+  <a href="./saml/authproc_subjectid.html">
+   <code>
+    saml:SubjectID
+   </code>
+  </a>
+  : Generate SubjectID.
+ </li>
+ <li>
+  <a href="./saml/authproc_pairwiseid.html">
+   <code>
+    saml:PairwiseID
+   </code>
+  </a>
+  : Generate PairwiseID.
+ </li>
 </ul>
 <p>
  See the
