deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -167,6 +167,9 @@ For example, to use the LDAP module:
   validated if present and requests not passing validation will be refused.
  </li>
  <li>
+  The default value for attrname-format was changed to 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri'.
+ </li>
+ <li>
   In the  core:TargetedID authproc-filter, the
   <code>
    attributename
