--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -115,41 +115,56 @@ See the upgrade notes for specific information about upgrading.
 </h2>
 <ul>
  <li>
-  Support for certificate fingerprints was removed
+  Many changes, upgrades and improvements since the 1.x series.
  </li>
  <li>
-  Support for SAML 1.1 was removed
+  Most notably the new templating system based on Twig, a new
+  localization system based on gettext.
  </li>
  <li>
-  Old-style PHP templates were removed
+  Most modules have been moved out of the core package but can
+  easily be installed on-demand as required via composer.
  </li>
  <li>
-  Old-style dictionaries were removed
+  Better conformance by default to the SAML2INT standard.
  </li>
  <li>
-  The default value for attrname-format was changed to 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri'
-  to comply with SAML2INT
+  Code cleanups, improvements and simplifications.
  </li>
  <li>
-  core:PairwiseID and core:SubjectID authprocs no longer support the 'scope' config-setting.
-  Use 'scopeAttribute' instead to identify the attribute holding the scope.
+  Improved test coverage and more use of standard libraries.
  </li>
  <li>
-  Accepting unsolicited responses can be disabled by setting
-  <code>
-   enable_unsolicited
-  </code>
-  to
-  <code>
-   false
-  </code>
-  in the SP authsource.
+  Compatibility with modern versions of PHP.
  </li>
  <li>
-  Certificates and private keys can now be retrieved from a database
+  Variouw new features, including:
+  <ul>
+   <li>
+    SAML SubjectID and Pairwise ID support
+   </li>
+   <li>
+    Accepting unsolicited responses can be disabled by setting
+    <code>
+     enable_unsolicited
+    </code>
+    to
+    <code>
+     false
+    </code>
+    in the SP authsource.
+   </li>
+   <li>
+    Certificates and private keys can now be retrieved from a database
+   </li>
+   <li>
+    Support for Redis sentinel was added.
+   </li>
+  </ul>
  </li>
  <li>
-  Support for Redis sentinel was added (#1699)
+  Please read the upgrade notes for 2.0 because this release breaks
+  backwards compatibility in a number of places.
  </li>
 </ul></main></body>
 </html>
