--- a/stable/simplesamlphp-upgrade-notes-2.0.html
+++ b/stable/simplesamlphp-upgrade-notes-2.0.html
@@ -230,6 +230,17 @@ For example, to use the LDAP module:
  Configuration changes
 </h2>
 <p>
+ Our assets have been moved from the
+ <code>
+  www
+ </code>
+ to the
+ <code>
+  public
+ </code>
+ directory. You will have to update your webserver to reflect this change.
+</p>
+<p>
  Quite some options have been changed or removed. We recommend to start with a fresh
 template from
  <code>
@@ -321,18 +332,6 @@ an empty array (
    metadata.sources
   </code>
   .
- </li>
- <li>
-  Our assets have been moved from the
-  <code>
-   www
-  </code>
-  to the
-  <code>
-   public
-  </code>
-  directory. You will have to update
-  your webserver to reflect this change.
  </li>
 </ul>
 <h2 id="changes-relevant-for-module-developers">
