--- a/contrib_modules/webauthn/tested_tokens.html
+++ b/contrib_modules/webauthn/tested_tokens.html
@@ -84,8 +84,8 @@
  Attestation modes (None, Indirect)
 </h2>
 <div class="codehilite">
- <pre><span></span><code>* Yubikey 5 NFC
-* Yubikey 5C
+ <pre><span></span><code>* [Yubikey 5 NFC](https://www.yubico.com/product/yubikey-5-nfc/)
+* [Yubikey 5C](https://www.yubico.com/product/yubikey-5c/)
 * [Security Key by Yubico](https://support.yubico.com/support/solutions/articles/15000006900-security-key-by-yubico)
 * [Security Key NFC by Yubico](https://support.yubico.com/support/solutions/articles/15000019469-security-key-nfc)
 * [Feitian BioPass FIDO2](https://www.ftsafe.com/Products/FIDO/Bio)
