--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -88,6 +88,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-201">
+      Version 2.0.1
+     </a>
+    </li>
+    <li>
      <a href="#version-200">
       Version 2.0.0
      </a>
@@ -100,6 +105,20 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-201">
+ Version 2.0.1
+</h2>
+<ul>
+ <li>
+  Several issues regarding the use of the back-button were fixed (#1720)
+ </li>
+ <li>
+  Many fixes in documentation
+ </li>
+ <li>
+  Fixed config/authsources.php.dist so you can just rename it for new deployments to get you started (#1771)
+ </li>
+</ul>
 <h2 id="version-200">
  Version 2.0.0
 </h2>
@@ -128,7 +147,7 @@ See the upgrade notes for specific information about upgrading.
   Compatibility with modern versions of PHP.
  </li>
  <li>
-  Variouw new features, including:
+  Various new features, including:
   <ul>
    <li>
     SAML SubjectID and Pairwise ID support
