--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -113,6 +113,12 @@ See the upgrade notes for specific information about upgrading.
   Several issues regarding the use of the back-button were fixed (#1720)
  </li>
  <li>
+  Fixed loginpage_links feature in authsources (#1770)
+ </li>
+ <li>
+  Fixed language menu on mobile
+ </li>
+ <li>
   Many fixes in documentation
  </li>
  <li>
