deploy: 8e391e608ee0344ba86d48bca474c14bcfbe25ab

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -85,6 +85,16 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-1198">
+ Version 1.19.8
+</h2>
+<p>
+ Released 2-3-2023
+</p>
+<div class="codehilite">
+ <pre><span></span><code>* Dependencies have been bumped
+</code></pre>
+</div>
 <h2 id="version-1197">
  Version 1.19.7
 </h2>
