--- a/contrib_modules/statistics/statistics.html
+++ b/contrib_modules/statistics/statistics.html
@@ -310,8 +310,10 @@ example if the STAT keyword is not in column 3.
  You also should setup the cron module:
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="nb">cd</span><span class="w"> </span>modules/cron
-touch<span class="w"> </span><span class="nb">enable</span>
+ <pre><span></span><code><span class="x">'module.enable' =&gt; [</span>
+<span class="x">    'cron' =&gt; true,</span>
+<span class="x">    …</span>
+<span class="x">],</span>
 </code></pre>
 </div>
 <h3 id="alternative-to-using-the-cron-module">
