deploy: 8e391e608ee0344ba86d48bca474c14bcfbe25ab

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -92,7 +92,7 @@ See the upgrade notes for specific information about upgrading.
  Released 2-3-2023
 </p>
 <div class="codehilite">
- <pre><span></span><code>* Dependencies have been bumped
+ <pre><span></span><code>* Dependencies have been bumped (CVE-2022-24894)
 </code></pre>
 </div>
 <h2 id="version-1197">
