--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -207,6 +207,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed the possibility to return ALL attributes (simplesamlphp/simplesamlphp-module-ldap#39)
  </li>
+ <li>
+  Restored the possibility to use anonymous bind (simplesamlphp/simplesamlphp-module-ldap#41)
+ </li>
 </ul>
 <p>
  <code>
